--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -10,6 +10,12 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="libs/moment.min.js"></script>  
   <title>Work Day Scheduler</title>
 </head>
 
@@ -19,7 +25,7 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <script src="libs/moment.min.js"></script>
+
   <div class="container">
 
     <!-- Timeblocks go here -->
@@ -32,7 +38,7 @@
         <input class="border-0 form-control textarea bg-transparent" type="text" placeholder="Default input">
       </div>
       <div class="col-2 saveBtn">
-        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        <button type="submit" class="btn btn-primary mb-2">Save</button>
      </div>
     </div>
  
@@ -117,10 +123,9 @@
             </div>
             <div class="col-2 saveBtn">
             </div>
-          </div>>
+          </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 </body>
 
 </html>
