--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class='col-2 hour'> 6am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea6" name="text6" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea6" name="text6" placeholder="input your calendar entry here" rows="1"></textarea>
         </textarea>
       </div>
 
@@ -42,7 +42,7 @@
       <div class='col-2 hour'> 7am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea7" name="text7" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea7" name="text7" placeholder="input your calendar entry here" rows="1"></textarea>
         </textarea>
       </div>
 
@@ -55,7 +55,7 @@
       <div class='col-2 hour'> 8am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea8" name="text8" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea8" name="text8" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -68,7 +68,7 @@
       <div class='col-2 hour'> 9am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea9" name="text9" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0 " id="textArea9" name="text9" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -81,7 +81,7 @@
       <div class='col-2 hour'> 10am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea10" name="text10" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea10" name="text10" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -94,7 +94,7 @@
       <div class='col-2 hour'>11am
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea11" name="text11" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea11" name="text11" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -108,7 +108,7 @@
       <div class='col-2 hour'> 12pm
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea12" name="text12" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea12" name="text12" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -121,7 +121,7 @@
       <div class='col-2 hour'> 1pm
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea13" name="text13" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea13" name="text13" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
@@ -135,7 +135,7 @@
       <div class='col-2 hour'> 2pm
       </div>
       <div class="col-8 form-group">
-        <textarea class="form-control bg-transparent border-0" id="textArea14" name="text14" rows="1"></textarea>
+        <textarea class="form-control bg-transparent border-0" id="textArea14" name="text14" rows="1" placeholder="input your calendar entry here"></textarea>
         </textarea>
       </div>
 
